Limit textfields length

--- a/IPSX/Flows/Wallets/Storyboard/Base.lproj/WalletAdd.storyboard
+++ b/IPSX/Flows/Wallets/Storyboard/Base.lproj/WalletAdd.storyboard
@@ -1024,10 +1024,10 @@
                                 </constraints>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="walletLarge" translatesAutoresizingMaskIntoConstraints="NO" id="DVE-ag-zOc">
-                                <rect key="frame" x="162" y="219.33333333333334" width="51" height="51.000000000000028"/>
+                                <rect key="frame" x="162" y="219.66666666666666" width="51" height="50.999999999999972"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address from CryptoWallet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bCN-Pu-Wrv">
-                                <rect key="frame" x="73.666666666666686" y="291.33333333333331" width="228" height="22"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address from CryptoWallet" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bCN-Pu-Wrv">
+                                <rect key="frame" x="73.666666666666671" y="291.66666666666669" width="227.66666666666663" height="21.666666666666686"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                 <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1650000066" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -1173,6 +1173,7 @@
                             <constraint firstItem="Zb8-Z2-zxV" firstAttribute="trailing" secondItem="bm2-4L-bLj" secondAttribute="trailing" id="L6c-Ea-gnE"/>
                             <constraint firstItem="lwv-p7-kde" firstAttribute="leading" secondItem="gaH-hh-8qK" secondAttribute="leading" constant="27" id="LfE-T1-026"/>
                             <constraint firstItem="gAX-UH-faK" firstAttribute="top" secondItem="N1b-tr-w13" secondAttribute="bottom" constant="16" id="OwR-tr-Egj"/>
+                            <constraint firstItem="gaH-hh-8qK" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="bCN-Pu-Wrv" secondAttribute="trailing" constant="15" id="PKw-A7-rga"/>
                             <constraint firstItem="bm2-4L-bLj" firstAttribute="leading" secondItem="gaH-hh-8qK" secondAttribute="leading" id="Pf1-GI-Af9"/>
                             <constraint firstItem="gaH-hh-8qK" firstAttribute="trailing" secondItem="oBO-bb-TdT" secondAttribute="trailing" id="To0-Ms-WWS"/>
                             <constraint firstItem="Zb8-Z2-zxV" firstAttribute="top" secondItem="bm2-4L-bLj" secondAttribute="bottom" id="Xqh-Zz-E3P"/>
@@ -1188,6 +1189,7 @@
                             <constraint firstItem="gaH-hh-8qK" firstAttribute="trailing" secondItem="gAX-UH-faK" secondAttribute="trailing" id="lrk-mg-Ikg"/>
                             <constraint firstItem="qCZ-qS-qD2" firstAttribute="centerX" secondItem="6i9-29-sqt" secondAttribute="centerX" id="pTS-uw-VVM"/>
                             <constraint firstItem="N1b-tr-w13" firstAttribute="leading" secondItem="gaH-hh-8qK" secondAttribute="leading" constant="7" id="rsb-pE-IN7"/>
+                            <constraint firstItem="bCN-Pu-Wrv" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="gaH-hh-8qK" secondAttribute="leading" constant="15" id="sFF-eP-ibJ"/>
                             <constraint firstItem="N1b-tr-w13" firstAttribute="top" secondItem="oBO-bb-TdT" secondAttribute="bottom" constant="16" id="tbU-z9-Yui"/>
                             <constraint firstItem="Unl-9i-K9t" firstAttribute="leading" secondItem="gaH-hh-8qK" secondAttribute="leading" id="vuZ-jA-Frn"/>
                         </constraints>
@@ -1229,6 +1231,6 @@
         <image name="walletLarge" width="51" height="51.666667938232422"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="kox-f1-XBp"/>
+        <segue reference="VIp-L5-DOc"/>
     </inferredMetricsTieBreakers>
 </document>
