--- a/IPSX/Flows/Register/Storyboard/LegalDetails.storyboard
+++ b/IPSX/Flows/Register/Storyboard/LegalDetails.storyboard
@@ -235,7 +235,9 @@
                     <navigationItem key="navigationItem" id="48M-pX-6cG"/>
                     <connections>
                         <outlet property="backButton" destination="2NJ-hK-34g" id="1VL-EH-5XK"/>
+                        <outlet property="certificateButton" destination="txb-su-Wok" id="4s0-1Z-LzN"/>
                         <outlet property="choosenFileLabel" destination="uDH-3f-0Hb" id="2lo-fD-Qbu"/>
+                        <outlet property="countryButton" destination="S89-5j-yKy" id="rJK-Lu-3Au"/>
                         <outlet property="countryRTextField" destination="w6V-0G-k6x" id="U59-NA-hXt"/>
                         <outlet property="nextButton" destination="vBW-oK-kA0" id="3aK-vR-cX9"/>
                         <outlet property="signWithAnotherAccount" destination="Kme-rE-icj" id="cW4-E4-dMJ"/>
@@ -670,7 +672,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="isI-bf-5ZR" userLabel="VAT" customClass="RichTextFieldView" customModule="IPSX" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="240" width="343" height="80"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="VAT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x78-0d-SUL">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="VAT (Optional)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x78-0d-SUL">
                                                 <rect key="frame" x="0.0" y="0.0" width="313" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
