Forbid withdrawals if there is no ballance

--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -236,7 +236,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0uR-0B-vmN">
-                                        <rect key="frame" x="13" y="1" width="100" height="43"/>
+                                        <rect key="frame" x="12.666666666666664" y="1" width="100" height="43"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="filter" translatesAutoresizingMaskIntoConstraints="NO" id="VaV-k4-vxl">
                                                 <rect key="frame" x="13" y="15" width="19" height="17"/>
@@ -305,7 +305,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CZ0-Ke-saS">
-                                        <rect key="frame" x="13" y="1" width="100" height="43"/>
+                                        <rect key="frame" x="12.666666666666657" y="1" width="100" height="43"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favorites" translatesAutoresizingMaskIntoConstraints="NO" id="NOc-sp-8G0">
                                                 <rect key="frame" x="6" y="15" width="19" height="17"/>
@@ -374,7 +374,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kSy-pO-qmy">
-                                        <rect key="frame" x="13" y="1" width="100" height="43"/>
+                                        <rect key="frame" x="12.666666666666686" y="1" width="100" height="43"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cart" translatesAutoresizingMaskIntoConstraints="NO" id="5Z8-Re-hGD">
                                                 <rect key="frame" x="12" y="15" width="19" height="17"/>
@@ -396,7 +396,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UYB-eJ-b1k">
-                                                <rect key="frame" x="-13" y="-1" width="125" height="45"/>
+                                                <rect key="frame" x="-12.666666666666686" y="-1" width="125" height="45"/>
                                                 <connections>
                                                     <action selector="cartButtonAction:" destination="6jc-WL-DqT" eventType="touchUpInside" id="5ck-yu-zZO"/>
                                                 </connections>
@@ -1663,7 +1663,7 @@
                                         <rect key="frame" x="0.0" y="576" width="375" height="58"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="MEt-hk-FUa" id="MFV-AD-8RI">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="58"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="57.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hhl-mv-Piw" userLabel="Separator">
@@ -2949,7 +2949,7 @@ and rent your first proxy.</string>
                                                 <color key="textColor" red="0.53333333329999999" green="0.53333333329999999" blue="0.53333333329999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xpz-JO-KGg" customClass="RoundedButton" customModule="IPSX" customModuleProvider="target">
+                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xpz-JO-KGg" customClass="RoundedButton" customModule="IPSX" customModuleProvider="target">
                                                 <rect key="frame" x="111" y="152" width="153" height="34"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
@@ -3009,10 +3009,10 @@ and rent your first proxy.</string>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="izV-5y-unH" userLabel="Deposit" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
-                                            <rect key="frame" x="15" y="24" width="345" height="67"/>
+                                            <rect key="frame" x="15" y="4" width="345" height="67"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="walletDeposit" translatesAutoresizingMaskIntoConstraints="NO" id="k3O-Bx-hdE">
-                                                    <rect key="frame" x="18" y="18.666666666666664" width="30" height="30"/>
+                                                    <rect key="frame" x="18" y="18.666666666666671" width="30" height="30"/>
                                                     <color key="tintColor" red="0.1647058824" green="0.67500001190000003" blue="0.87800002099999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="eQY-zq-1GF"/>
@@ -3020,7 +3020,7 @@ and rent your first proxy.</string>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Deposits" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RPq-xm-5k0">
-                                                    <rect key="frame" x="71" y="16.666666666666664" width="266" height="20"/>
+                                                    <rect key="frame" x="71" y="16.666666666666668" width="266" height="20.000000000000004"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                                     <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1647058824" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -3059,7 +3059,7 @@ and rent your first proxy.</string>
                                             </userDefinedRuntimeAttributes>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7OC-mT-IhA" userLabel="Edit Profile" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
-                                            <rect key="frame" x="15" y="101" width="345" height="67"/>
+                                            <rect key="frame" x="15" y="81" width="345" height="67"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="walletWidthdrawals" translatesAutoresizingMaskIntoConstraints="NO" id="S4v-oJ-ujv">
                                                     <rect key="frame" x="18" y="18.666666666666671" width="30" height="30"/>
@@ -3075,7 +3075,7 @@ and rent your first proxy.</string>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Make a withdrawal, withdrawal history" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="18y-Rp-WMt">
-                                                    <rect key="frame" x="71" y="34.666666666666657" width="266" height="16"/>
+                                                    <rect key="frame" x="71" y="34.666666666666671" width="266" height="16"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -3083,7 +3083,7 @@ and rent your first proxy.</string>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PPh-mv-tFN">
                                                     <rect key="frame" x="0.0" y="0.0" width="345" height="67"/>
                                                     <connections>
-                                                        <segue destination="w2O-u4-2FT" kind="show" id="iMO-7F-x0M"/>
+                                                        <action selector="withdrawAction:" destination="Vdw-yR-k98" eventType="touchUpInside" id="rfI-o8-yIt"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
@@ -3108,7 +3108,7 @@ and rent your first proxy.</string>
                                             </userDefinedRuntimeAttributes>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Aqv-Kz-hxZ" userLabel="Refunds" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
-                                            <rect key="frame" x="15" y="178" width="345" height="67"/>
+                                            <rect key="frame" x="15" y="158" width="345" height="67"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Wallet" translatesAutoresizingMaskIntoConstraints="NO" id="Vwj-og-ml2">
                                                     <rect key="frame" x="18" y="18.666666666666657" width="30" height="30"/>
@@ -3157,13 +3157,13 @@ and rent your first proxy.</string>
                                             </userDefinedRuntimeAttributes>
                                         </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Extras" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yOZ-pr-8yW">
-                                            <rect key="frame" x="15" y="271" width="345" height="22"/>
+                                            <rect key="frame" x="15" y="251" width="345" height="22"/>
                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                             <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.1647058824" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SZU-44-j9A" userLabel="Enroll Testing" customClass="RoundedView" customModule="IPSX" customModuleProvider="target">
-                                            <rect key="frame" x="15" y="303" width="345" height="67"/>
+                                            <rect key="frame" x="15" y="283" width="345" height="67"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="friendship" translatesAutoresizingMaskIntoConstraints="NO" id="hdp-17-N95">
                                                     <rect key="frame" x="19" y="18.666666666666686" width="30" height="30"/>
@@ -3224,7 +3224,7 @@ and rent your first proxy.</string>
                                         <constraint firstItem="yOZ-pr-8yW" firstAttribute="leading" secondItem="Aqv-Kz-hxZ" secondAttribute="leading" id="TLt-aV-IoW"/>
                                         <constraint firstItem="Aqv-Kz-hxZ" firstAttribute="leading" secondItem="7OC-mT-IhA" secondAttribute="leading" id="WS0-3M-djt"/>
                                         <constraint firstItem="yOZ-pr-8yW" firstAttribute="top" secondItem="Aqv-Kz-hxZ" secondAttribute="bottom" constant="26" id="hrq-xn-4S6"/>
-                                        <constraint firstItem="izV-5y-unH" firstAttribute="top" secondItem="4ZZ-jI-hx5" secondAttribute="top" constant="24" id="i1i-KW-GOi"/>
+                                        <constraint firstItem="izV-5y-unH" firstAttribute="top" secondItem="4ZZ-jI-hx5" secondAttribute="top" constant="4" id="i1i-KW-GOi"/>
                                         <constraint firstAttribute="trailing" secondItem="izV-5y-unH" secondAttribute="trailing" constant="15" id="jV3-jL-kf8"/>
                                         <constraint firstItem="izV-5y-unH" firstAttribute="leading" secondItem="4ZZ-jI-hx5" secondAttribute="leading" constant="15" id="oEN-8w-zCL"/>
                                         <constraint firstItem="7OC-mT-IhA" firstAttribute="top" secondItem="izV-5y-unH" secondAttribute="bottom" constant="10" id="yAq-By-PAQ"/>
@@ -3236,7 +3236,7 @@ and rent your first proxy.</string>
                                         <rect key="frame" x="0.0" y="499" width="375" height="58"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="95P-YM-OqQ" id="f0S-Vr-Gnu">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="58"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="57.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="locked" translatesAutoresizingMaskIntoConstraints="NO" id="huV-Rv-z7o">
@@ -3560,6 +3560,7 @@ and rent your first proxy.</string>
                         <outlet property="titleTopConstraint" destination="WWt-mV-jj8" id="r2O-h3-cH6"/>
                         <outlet property="topConstraintOutlet" destination="0oj-nN-EAp" id="IXQ-DR-FGm"/>
                         <outlet property="topRootView" destination="2Zz-ea-ljx" id="9lE-oJ-Pr9"/>
+                        <segue destination="w2O-u4-2FT" kind="show" identifier="WithdrawSegueID" id="cwb-Pg-hT7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zw2-Rk-Fbm" sceneMemberID="firstResponder"/>
