Enable buy from cryptocoin if env != .dev

--- a/IPSX/Flows/Funds/Storyboard/Base.lproj/TokenRequest.storyboard
+++ b/IPSX/Flows/Funds/Storyboard/Base.lproj/TokenRequest.storyboard
@@ -42,7 +42,7 @@
                                             <color key="titleColor" red="0.16862745100000001" green="0.51372549020000002" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <segue destination="lDk-bw-qv3" kind="unwind" unwindAction="unwindToWiewGeneratedAddressWithSegue:" id="Nlw-zp-Cqv"/>
+                                            <action selector="closeButton:" destination="9x0-LF-Zd9" eventType="touchUpInside" id="i0Q-IP-c3z"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xwQ-Om-RlS">
@@ -316,7 +316,6 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6pq-8Y-JIy" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="lDk-bw-qv3" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="7572" y="-155.17241379310346"/>
         </scene>
