--- a/IPSX/Flows/Wallets/Storyboard/Base.lproj/WalletAdd.storyboard
+++ b/IPSX/Flows/Wallets/Storyboard/Base.lproj/WalletAdd.storyboard
@@ -1201,6 +1201,7 @@
                         <outlet property="approveStateHolderView" destination="Mv2-c6-FNg" id="PhD-B5-2GA"/>
                         <outlet property="approveStateImageView" destination="hM0-Nj-2Pq" id="1Es-s0-FEr"/>
                         <outlet property="approveStateLabel" destination="mr4-10-1In" id="AB8-eS-2uB"/>
+                        <outlet property="buyTokensButton" destination="lwv-p7-kde" id="Df8-B2-Xue"/>
                         <outlet property="lockedHolderWidthConstraint" destination="Npe-0D-Hft" id="AF6-pj-576"/>
                         <outlet property="lockedStateHolderView" destination="Z04-1A-KLx" id="99v-bO-Gg7"/>
                         <outlet property="topBarView" destination="bm2-4L-bLj" id="hZX-I2-odU"/>
@@ -1209,11 +1210,20 @@
                         <outlet property="walletAddress" destination="N1b-tr-w13" id="lJ2-sN-xCf"/>
                         <outlet property="walletDateLabel" destination="qCZ-qS-qD2" id="Bk6-gh-xum"/>
                         <outlet property="walletNameLabel" destination="bCN-Pu-Wrv" id="nSb-sU-V8i"/>
+                        <segue destination="U4f-iq-1H4" kind="presentation" identifier="TokenrequestSegueID" id="A3R-kx-bAk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TKF-XD-v8f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5180" y="158"/>
+        </scene>
+        <!--TokenRequest-->
+        <scene sceneID="Fvg-PS-dSc">
+            <objects>
+                <viewControllerPlaceholder storyboardName="TokenRequest" id="U4f-iq-1H4" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xGN-c4-VA6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5729" y="228"/>
         </scene>
     </scenes>
     <resources>
