Localise landing screen

--- a/IPSX/Storyboard/Base.lproj/Landing.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Landing.storyboard
@@ -139,7 +139,11 @@
                         <outlet property="backgroundImageView" destination="lT4-1r-KeI" id="Ecl-5A-mdJ"/>
                         <outlet property="bottomView" destination="MRN-Ud-kuM" id="up9-Wv-GQ7"/>
                         <outlet property="labelTopConstraint" destination="B49-yZ-wpd" id="F6p-et-aX4"/>
+                        <outlet property="loginButton" destination="ugu-Hv-Kee" id="y4x-Jj-jCA"/>
                         <outlet property="marketplaceImageView" destination="3qc-7n-QQI" id="7vd-ij-R4a"/>
+                        <outlet property="registerButton" destination="kCB-he-W31" id="EEI-4O-Gtv"/>
+                        <outlet property="viewMarketplaceButton" destination="ZZ7-Ir-bER" id="dZq-u2-jnj"/>
+                        <outlet property="welcomeTopLabel" destination="gHa-Hj-Pph" id="x6d-NB-94z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="afi-c2-hPI" userLabel="First Responder" sceneMemberID="firstResponder"/>
