Localise login and search

--- a/IPSX/Flows/Login/Storyboard/Base.lproj/Login.storyboard
+++ b/IPSX/Flows/Login/Storyboard/Base.lproj/Login.storyboard
@@ -160,7 +160,12 @@
                     <navigationItem key="navigationItem" id="289-tN-zXf"/>
                     <connections>
                         <outlet property="backgroundImageView" destination="nnt-XC-RHm" id="4Qj-zb-AIs"/>
+                        <outlet property="closeButton" destination="THk-VM-aCB" id="nFF-Q4-iaj"/>
                         <outlet property="loadingView" destination="h4V-eW-ZKN" id="oUf-Us-WoC"/>
+                        <outlet property="loginEmailButton" destination="5c7-TE-Gj8" id="ur9-yc-z0T"/>
+                        <outlet property="loginFacebookButton" destination="RG0-PZ-h1M" id="gwY-uw-hty"/>
+                        <outlet property="loginSubtitle" destination="E3V-S1-mjQ" id="luI-PD-30Y"/>
+                        <outlet property="loginTitle" destination="xWE-ka-htc" id="pZu-Nn-ejS"/>
                         <outlet property="separatorView" destination="QTH-f1-mMr" id="wFw-Zz-HaQ"/>
                         <outlet property="topBarView" destination="IDt-vf-HrN" id="dvW-gX-H2K"/>
                         <outlet property="topConstraintOutlet" destination="ANj-Mf-9gX" id="ldf-NV-0FR"/>
@@ -324,7 +329,7 @@
                                             <constraint firstItem="zUh-KK-FGF" firstAttribute="centerY" secondItem="IEM-GW-W9e" secondAttribute="centerY" constant="-2" id="lae-Ko-NNz"/>
                                             <constraint firstItem="2sI-kK-0XQ" firstAttribute="top" secondItem="Lfo-9A-LOl" secondAttribute="bottom" constant="3" id="rgA-I3-2LI"/>
                                             <constraint firstItem="IEM-GW-W9e" firstAttribute="centerY" secondItem="RzB-N1-Imc" secondAttribute="centerY" id="xNw-7j-dHE"/>
-                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="zmM-MY-DzF" secondAttribute="trailing" symbolic="YES" id="zsa-hO-BBR"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="zmM-MY-DzF" secondAttribute="trailing" constant="20" symbolic="YES" id="zsa-hO-BBR"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="contentTextField" destination="zUh-KK-FGF" id="0IW-VJ-Wxk"/>
@@ -455,9 +460,18 @@
                         <outlet property="backgroundImageView" destination="YpF-L5-t2s" id="XAP-zP-N76"/>
                         <outlet property="bottomContinueConstraint" destination="ERF-sR-gSa" id="rxY-Kh-FDh"/>
                         <outlet property="continueButton" destination="rF7-LN-NfW" id="cA9-q3-ro1"/>
+                        <outlet property="emailAddressErrorLabel" destination="ACO-7H-ZZZ" id="iyd-91-YXv"/>
+                        <outlet property="emailAddressFieldPlaceholder" destination="qJE-2u-yYf" id="BZj-k8-ld5"/>
+                        <outlet property="emailAddressFieldTitle" destination="Gtw-4x-qyj" id="bEv-20-FAk"/>
                         <outlet property="emailRichTextView" destination="nhQ-TM-OQd" id="82Z-P6-GEY"/>
+                        <outlet property="forgotPassButton" destination="M5J-cg-8LK" id="mxb-Yy-vK2"/>
                         <outlet property="loadingView" destination="hdW-3J-azh" id="cJI-a3-Skf"/>
+                        <outlet property="loginButton" destination="rF7-LN-NfW" id="Hsh-Hz-Or5"/>
+                        <outlet property="loginEmailTitle" destination="sVm-tX-9G9" id="mao-0P-sw8"/>
                         <outlet property="passRichTextField" destination="RzB-N1-Imc" id="HSH-mK-UVb"/>
+                        <outlet property="passwordFieldErrorLabel" destination="2sI-kK-0XQ" id="OZC-IU-ykU"/>
+                        <outlet property="passwordFieldPlaceholder" destination="zUh-KK-FGF" id="Nho-ep-tNj"/>
+                        <outlet property="paswordFieldTitle" destination="zmM-MY-DzF" id="BkD-5Q-b1V"/>
                         <outlet property="separatorView" destination="ziu-Gm-gNo" id="CzS-5B-dBt"/>
                         <outlet property="topBarView" destination="5IV-4B-Hec" id="n2g-E3-r9r"/>
                         <outlet property="topConstraintOutlet" destination="8If-QR-3td" id="Mg7-nl-m6m"/>
