--- a/IPSX/Storyboard/Base.lproj/Search.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Search.storyboard
@@ -173,7 +173,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="China" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q2R-Ah-6hi">
-                                                    <rect key="frame" x="62" y="20" width="281" height="17"/>
+                                                    <rect key="frame" x="62" y="20.333333333333332" width="281" height="16.999999999999996"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                                     <color key="textColor" red="0.16470588235294117" green="0.16470588235294117" blue="0.16470588235294117" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -321,7 +321,10 @@
                         <outlet property="closeButton" destination="Mfk-dz-DFx" id="Ew2-tV-R0v"/>
                         <outlet property="collectionTopConstraint" destination="FSC-Fd-bnJ" id="GMH-rF-GFm"/>
                         <outlet property="loadingView" destination="BDO-tK-6Ak" id="YtQ-zh-XST"/>
+                        <outlet property="navTitleLabel" destination="iRQ-1e-1gV" id="sec-pc-sT1"/>
                         <outlet property="saveButton" destination="Vim-sg-dtc" id="2LY-RO-fmM"/>
+                        <outlet property="searchTextfield" destination="NR6-ew-yQb" id="7nA-38-J8g"/>
+                        <outlet property="searchTitleLabel" destination="mUr-Lf-y1z" id="dP5-PN-qke"/>
                         <outlet property="searchView" destination="Yhr-9L-cfB" id="0ji-d2-GTd"/>
                         <outlet property="selectedItemsCollectionview" destination="Dvd-kE-kkV" id="3G6-pM-fc4"/>
                         <outlet property="tableView" destination="WVZ-01-mjG" id="cct-vr-3LS"/>
